; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_detelecine.c_pullup_queue_length.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_detelecine.c_pullup_queue_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pullup_field = type { %struct.pullup_field* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pullup_field*, %struct.pullup_field*)* @pullup_queue_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pullup_queue_length(%struct.pullup_field* %0, %struct.pullup_field* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pullup_field*, align 8
  %5 = alloca %struct.pullup_field*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.pullup_field*, align 8
  store %struct.pullup_field* %0, %struct.pullup_field** %4, align 8
  store %struct.pullup_field* %1, %struct.pullup_field** %5, align 8
  store i32 1, i32* %6, align 4
  %8 = load %struct.pullup_field*, %struct.pullup_field** %4, align 8
  %9 = icmp ne %struct.pullup_field* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.pullup_field*, %struct.pullup_field** %5, align 8
  %12 = icmp ne %struct.pullup_field* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %29

14:                                               ; preds = %10
  %15 = load %struct.pullup_field*, %struct.pullup_field** %4, align 8
  store %struct.pullup_field* %15, %struct.pullup_field** %7, align 8
  br label %16

16:                                               ; preds = %23, %14
  %17 = load %struct.pullup_field*, %struct.pullup_field** %7, align 8
  %18 = load %struct.pullup_field*, %struct.pullup_field** %5, align 8
  %19 = icmp ne %struct.pullup_field* %17, %18
  br i1 %19, label %20, label %27

20:                                               ; preds = %16
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %6, align 4
  br label %23

23:                                               ; preds = %20
  %24 = load %struct.pullup_field*, %struct.pullup_field** %7, align 8
  %25 = getelementptr inbounds %struct.pullup_field, %struct.pullup_field* %24, i32 0, i32 0
  %26 = load %struct.pullup_field*, %struct.pullup_field** %25, align 8
  store %struct.pullup_field* %26, %struct.pullup_field** %7, align 8
  br label %16

27:                                               ; preds = %16
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %27, %13
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
